# ekza-rust-server

./: .dockerignore  .env.example  .env.template  .gitignore  Cargo.toml  Dockerfile  Makefile
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  state.rs  telemetry.rs
src/realtime/: mod.rs
src/routes/: health.rs  mod.rs
src/routes/v1/: echo.rs  mod.rs
src/services/: mod.rs
