[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
dotenvy = "0.15.7"
futures-util = "0.3.32"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"], optional = true }
rust_socketio = { version = "0.6.0", features = ["async"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socketioxide = { version = "0.18.1", features = ["state", "tracing", "v4"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[features]
default = []
agents = ["dep:reqwest", "dep:rust_socketio"]

[[bin]]
name = "agent_bot"
path = "src/bin/agent_bot.rs"
required-features = ["agents"]

[[bin]]
name = "agent_bridge"
path = "src/bin/agent_bridge.rs"
required-features = ["agents"]

[[bin]]
name = "world_agent"
path = "src/bin/world_agent.rs"
required-features = ["agents"]
